--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
 
         <form action="/{{this.id}}?_method=PUT" method="POST">
                 <input type="hidden" name="devoured" value="false">
-                <button class="btn btn-warning" type="submit">Eat Me!</button>
+                <button  type="submit">Eat that burger!</button>
             </form>
 
     </li>
@@ -35,10 +35,10 @@
 
     <form  action="/" method="POST">
         
-            <label for="dab">Burger Name:</label>
-            <input type="text" id="dab" name="burger_name">
-        </div>
+            <label for="data">Burger Name:</label>
+            <input type="text" id="data" name="burger_name">
+          </div>
         <button  type="submit">Add Burger</button>
     </form>
-</div>
+  </div>
 
