--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,9 @@
     <title>Eat A Burger!</title>
 </head>
 
+<img src="/assets/images/burger.jpg" align="center" height="150" width="150" id = "picture">
+
+
 <body>
     {{{ body }}}
 </body>
