--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,12 @@
-<h1>eat a burger</h1>
 
-<h2>uneaten!</h2>
+<div id = "burgerContent">
+<h1>EAT A BURGER!</h1>
+
+
+<div id = "centerBox">
+
+<div id = "leftSide">
+<h2> Uneaten!</h2>
 
 <ul>
   {{#each burgers}}
@@ -17,7 +23,9 @@
     {{/unless}}
   {{/each}}
 </ul>
+</div>
 
+<div id = "rightSide">
 <h2>Eaten!</h2>
 
 <ul>
@@ -29,8 +37,9 @@
     {{/if}}
   {{/each}}
 </ul>
-
-<div>
+</div>
+</div>
+<div id ="add">
     <h2>Add a Burger: </h2>
 
     <form  action="/" method="POST">
@@ -42,3 +51,4 @@
     </form>
   </div>
 
+</div>
